@@ -174,6 +174,26 @@ but it might warrant an exception. TODO.
     BLA=bla
     @reboot echo "mailto example, my/path"
 
+The environment variable is mainly used for grouping items per buildout. Now
+for some upgrade testing.  Pre 0.4 versions of this recipe did not group
+entries per buildout.  We'll add an entry without such a "grouping environment
+variable". First the start situation:
+
+    >>> c.crontab=['WARNING=The entries below were generated by buildout, do not modify',
+    ...            '@reboot echo nothing happens']
+    >>> print c # doctest: +ELLIPSIS +NORMALIZE_WHITESPACE
+    WARNING=The entries below were generated by buildout, do not modify
+    @reboot echo nothing happens    
+
+Now we add a similar entry, but with a BUILDOUT environment variable.  The old
+item should now be inside the environment, without a double:
+
+    >>> c.add_entry('@reboot echo nothing happens', BUILDOUT="my/buildout")
+    >>> print c # doctest: +REPORT_NDIFF
+    WARNING=The entries below were generated by buildout, do not modify
+    BUILDOUT=my/buildout
+    @reboot echo nothing happens
+
 
 Read/write crontab methods
 --------------------------
@@ -319,3 +339,4 @@ And now we can uninstall again (albeit with some warnings):
     Running uninstall recipe.
     foo: WARNING: Did not find a crontab-entry during uninstall; please check manually if everything was removed correctly
     <BLANKLINE>
+
